# py_atvremote

./: .gitignore  LICENSE  compile_proto.sh  pairing_messages.py  pyproject.toml  remote.py  server.pem
atvremote/: app.py  atvremote.py  messages.py
atvremote/pair/: messages.py
atvremote/proto/: pairing.proto  pairing_pb2.pyi
atvremote/remote/: messages.py  remote.py
atvremote/remote/proto/: commands.proto  commands_pb2.py  commands_pb2.pyi
proto/: pairing.proto  pairing_pb2.py  pairing_pb2.pyi
src/atvremote/: atvremote.py  messages.py
src/py_atvremote/: constants.py  messages.py  py_atvremote.py
src/py_atvremote/proto/: pairing_pb2.py
tests/: test.py
