[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project]
name = "atvremote"
version = "0.0.6"
dependencies = [
  "cryptography",
  "protobuf"
]
authors = [
  { name="Fabian Sievers", email="41748817+fsievers22@users.noreply.github.com" },
]
description = "Package to connect to an AndroidTV through the google remote sdk v2"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/fsievers22/atvremote"
"Bug Tracker" = "https://github.com/fsievers22/atvremote/issues"
